fix: sidebar's top padding on mobile devices

--- a/src/.vuepress/theme/styles/mobile.styl
+++ b/src/.vuepress/theme/styles/mobile.styl
@@ -13,8 +13,6 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
 // wide mobile
 @media (max-width: $MQMobile)
   .sidebar
-    top $navbarHeight
-    padding-top $navbarHeight
     transform translateX(-100%)
     transition transform .2s ease
   .page
